"""
Tests for health check API - using mock fixtures
"""

import pytest
from datetime import datetime


class TestHealthResponses:
    """Tests for health check response structures"""

    def test_health_response_structure(self):
        """Test health check response has correct structure"""
        response = {
            "status": "healthy",
            "timestamp": datetime.utcnow().isoformat() + "Z",
            "version": "11.0.0",
            "environment": "test",
            "node_id": "test-node",
            "services": {"api": "operational"}
        }

        assert "status" in response
        assert "timestamp" in response
        assert "version" in response
        assert "environment" in response
        assert "node_id" in response
        assert "services" in response

    def test_health_status_values(self):
        """Test valid health status values"""
        valid_statuses = ["healthy", "unhealthy", "degraded", "error"]
        assert "healthy" in valid_statuses
        assert "unhealthy" in valid_statuses

    def test_liveness_response_structure(self):
        """Test liveness check response structure"""
        response = {
            "alive": True,
            "timestamp": datetime.utcnow().isoformat() + "Z",
            "version": "11.0.0"
        }

        assert response["alive"] == True
        assert "timestamp" in response
        assert "version" in response

    def test_readiness_response_structure(self):
        """Test readiness check response structure"""
        response = {
            "ready": True,
            "timestamp": datetime.utcnow().isoformat() + "Z",
            "services": {
                "grpc_server": True,
                "consensus": True,
                "transaction_processor": True
            }
        }

        assert "ready" in response
        assert "timestamp" in response
        assert "services" in response

    def test_detailed_health_response(self):
        """Test detailed health check response"""
        response = {
            "status": "healthy",
            "timestamp": datetime.utcnow().isoformat() + "Z",
            "version": "11.0.0",
            "services": {
                "grpc_server": {"status": "running", "port": 9004},
                "consensus": {"status": "running", "state": "leader"},
                "transaction_processor": {"status": "running", "current_tps": 500.0}
            },
            "configuration": {
                "consensus_algorithm": "HyperRAFT++",
                "quantum_enabled": False,
                "ai_optimization": False
            }
        }

        assert response["status"] == "healthy"
        assert "services" in response
        assert "configuration" in response
        assert response["configuration"]["consensus_algorithm"] == "HyperRAFT++"

    def test_timestamp_format(self):
        """Test timestamp is in ISO format with Z suffix"""
        timestamp = datetime.utcnow().isoformat() + "Z"

        assert timestamp.endswith("Z")
        assert "T" in timestamp

    def test_version_format(self):
        """Test version follows semver format"""
        version = "11.0.0"
        parts = version.split(".")

        assert len(parts) == 3
        assert all(part.isdigit() for part in parts)


class TestHealthServiceMocks:
    """Tests using mock services"""

    def test_grpc_server_running(self, mock_grpc_server):
        """Test gRPC server reports running"""
        assert mock_grpc_server.is_running() == True
        assert mock_grpc_server.get_port() == 9004

    def test_consensus_engine_stats(self, mock_consensus_engine):
        """Test consensus engine returns proper stats"""
        stats = mock_consensus_engine.get_stats()

        assert stats["running"] == True
        assert stats["state"] == "leader"
        assert stats["leader"] == "test-node"

    def test_transaction_processor_stats(self, mock_transaction_processor):
        """Test transaction processor returns proper stats"""
        stats = mock_transaction_processor.get_stats()

        assert stats["running"] == True
        assert stats["processed_count"] == 1000
        assert stats["current_tps"] == 500.0

    def test_monitoring_stats(self, mock_monitoring):
        """Test monitoring returns proper stats"""
        stats = mock_monitoring.get_stats()

        assert stats["running"] == True
        assert stats["metrics_collected"] == 500

    def test_quantum_crypto_stats(self, mock_quantum_crypto):
        """Test quantum crypto returns proper stats"""
        stats = mock_quantum_crypto.get_stats()

        assert stats["initialized"] == True
        assert stats["algorithm"] == "CRYSTALS-Dilithium"
        assert stats["security_level"] == 5


class TestHealthServiceIntegration:
    """Integration tests for health services"""

    @pytest.mark.asyncio
    async def test_grpc_server_lifecycle(self, mock_grpc_server):
        """Test gRPC server start/stop"""
        await mock_grpc_server.start()
        assert mock_grpc_server.is_running() == True

        await mock_grpc_server.stop()
        mock_grpc_server.stop.assert_called()

    @pytest.mark.asyncio
    async def test_monitoring_lifecycle(self, mock_monitoring):
        """Test monitoring service start/stop"""
        await mock_monitoring.start()
        mock_monitoring.start.assert_called()

        await mock_monitoring.stop()
        mock_monitoring.stop.assert_called()

    @pytest.mark.asyncio
    async def test_consensus_engine_lifecycle(self, mock_consensus_engine):
        """Test consensus engine initialization"""
        await mock_consensus_engine.initialize()
        mock_consensus_engine.initialize.assert_called()

        await mock_consensus_engine.stop()
        mock_consensus_engine.stop.assert_called()

    @pytest.mark.asyncio
    async def test_transaction_processor_lifecycle(self, mock_transaction_processor):
        """Test transaction processor initialization"""
        await mock_transaction_processor.initialize()
        mock_transaction_processor.initialize.assert_called()

        await mock_transaction_processor.stop()
        mock_transaction_processor.stop.assert_called()
